[tool.poetry]
name = "tidelift"
version = "0.1.0"
description = ""
authors = ["Tyrel Souza <tyrel@tidelift.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"

# Old way to defining dev deps (<1.2.0)
[tool.poetry.dev-dependencies]
pytest = "^5.2"

# New way to defining dev deps (>=1.2.0)
[tool.poetry.group.dev.dependencies]
wcwidth = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
