[tool.poetry]
name = "tidelift"
version = "0.1.0"
description = ""
authors = ["Tyrel Souza <tyrel@tidelift.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"

# Old way to define development deps (<1.2.0)
[tool.poetry.dev-dependencies]
pytest = "^5.2"

# New way to define development deps (>=1.2.0)
[tool.poetry.group.dev.dependencies]
wcwidth = "*"

[tool.poetry.group.test.dependencies]
sqlparse = "0.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
